<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:autofillHints="name"
            android:id="@+id/et1"
            android:hint="@string/editt1"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:layout_marginEnd="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"/>
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textv1"
            android:textSize="30sp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>
        <CheckBox
            android:id="@+id/cb1"
            android:text="@string/checkb1"
            style="@style/checkb"/>
        <CheckBox
            android:id="@+id/cb2"
            android:text="@string/checkb2"
            style="@style/checkb"/>
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textv2"
            android:textSize="30sp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt1"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="#D3D3D3"
                android:gravity="center_horizontal"
                android:textColor="#000000"
                android:text="@string/bt1"
                android:onClick="subone"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/textv3"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@id/bt1"
                app:layout_constraintStart_toEndOf="@id/bt1"
                app:layout_constraintEnd_toStartOf="@id/bt2"/>

            <Button
                android:id="@+id/bt2"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="#D3D3D3"
                android:textColor="#000000"
                android:text="@string/bt2"
                android:onClick="plusone"
                app:layout_constraintStart_toEndOf="@id/tv2"
                android:textStyle="bold"
                android:textSize="25sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textv4"
            android:textSize="30sp"
            android:backgroundTint="#D3D3D3"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:text="@string/textv5"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:background="#ffffff"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="20dp"
                android:text="@string/bt3"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#D3D3D3"
                android:onClick="submitOrder"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv5"
                app:layout_constraintStart_toEndOf="@id/bt3"
                android:layout_marginLeft="20dp"
                android:text="@string/bt4"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#D3D3D3"
                android:onClick="resetOrder"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/bt5"
            android:textColor="#000000"
            android:textSize="20sp"
            android:onClick="email_order"
            android:layout_marginTop="60dp"
            android:backgroundTint="#D3D3D3"/>
    </LinearLayout>
</ScrollView>
